# china-administrative-divisions

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: rural_time_series_project.toml  rural_time_series_sources.toml
data/source/admin_codes/: 行政区划编码表_20260427.xlsx
data/source/economic_indicators/: china_macro_indicators.csv  china_macro_indicators_metadata.json
data/source/mca_changes/: 1999_中华人民共和国一九九九年县级以上行政区划变更情况.txt  2000_中华人民共和国二〇〇〇年县级以上行政区划变更情况.txt  2001_中华人民共和国二〇〇一年县级以上行政区划变更情况.txt  2002_中华人民共和国二〇〇二年县级以上行政区划变更情况.txt  2003_中华人民共和国二〇〇三年县级以上行政区划变更情况.txt  2004_中华人民共和国二〇〇四年县级以上行政区划变更情况.txt  2005_中华人民共和国二〇〇五年县级以上行政区划变更情况.txt  2006_中华人民共和国二〇〇六年县级以上行政区划变更情况.txt  2007_中华人民共和国二〇〇七年县级以上行政区划变更情况.txt  2008_中华人民共和国二〇〇八年县级以上行政区划变更情况.txt  2009_中华人民共和国二〇〇九年县级以上行政区划变更情况.txt  2010_中华人民共和国二〇一〇年县级以上行政区划变更情况.txt  manifest.csv  (+15 more)
docs/: classification.md  file_index.md  knowledge_graph.md  ner_rule_uie_workflow.md  nlp_relation_stats.md  project_structure.md  relation_examples.md  relation_extraction.md  rural_time_series_forecast.md  time_series_forecast.md  web_dashboard.md
scripts/: build_semantic_classification_eval.py
src/: classify.py  forecast.py  graph.py  ner.py  paddle_nlp_tokenize.py  relation.py  relation_statistics.py
src/rural_atlas/: __init__.py  admin.py  atlas.py  cli.py  download.py  forecast.py  ghsl.py  io.py  metrics.py  quantity.py  validate.py  zonal.py
tests/: test_project_structure.py
web/: web_app.py  webdb.py
web/templates/: area_detail.html  areas.html  base.html  classification.html  dashboard.html  forecast.html  forecast_v2.html  graph.html  ner.html  relations.html
(+17 files in other folders)
