[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "china-admin-division-history"
version = "0.1.0"
description = "国家行政区划与历史变更信息管理系统"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Course Project Team" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "matplotlib>=3.7",
  "flask>=3.0",
  "openpyxl>=3.1",
  "plotly>=5.18",
  "shapely>=2.0",
  "tifffile>=2023.7",
  "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
nlp = [
  "paddlepaddle>=2.6",
  "paddlenlp>=2.7",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
admin-divisions-tokenize = "paddle_nlp_tokenize:main"
admin-divisions-relation-stats = "relation_statistics:main"
admin-divisions-ner = "ner:main"
admin-divisions-re = "relation:main"
admin-divisions-classify = "classify:main"
admin-divisions-graph = "graph:main"
admin-divisions-forecast = "forecast:main"
rural-atlas = "rural_atlas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
  "classify",
  "forecast",
  "graph",
  "ner",
  "paddle_nlp_tokenize",
  "relation",
  "relation_statistics",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rural_atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
